tests/expectations/parser/tests/annotations_fail.out
Error [EPAR0370005]: expected , or ) -- found 'oops'
    --> test:18:80
     |
  18 |     @failing_annotation(some_key = "SomeString", another_key = "AnotherString" oops)
     |                                                                                ^^^^
